# trilha-python-dio

./: 01_desafio_bicicletaria.py
01 - Estrutura de dados/01 - Listas/: 11_extend.py
01 - Estrutura de dados/04 - Dicionários/: 02_dicionarios_aninhados.py
13 - APIs Assíncronas com FastAPI/dio-blog1/: main.py  pyproject.toml
13 - APIs Assíncronas com FastAPI/dio-blog1/controllers/: post.py
13 - APIs Assíncronas com FastAPI/dio-blog1/schemas/: post.py
13 - APIs Assíncronas com FastAPI/dio-blog1/views/: post.py
