[project]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "felipewillian03",email = "felipe_willian03@hotmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard] (>=0.42.0,<0.43.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
